<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserProfileFragment">
        <ImageButton
            android:id="@+id/imageButtonProfilePic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/upload"
            android:contentDescription="Picture for new user"
            android:translationZ="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewProfilePic"
            app:layout_constraintEnd_toEndOf="@+id/imageViewProfilePic"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageViewProfilePic"
            app:layout_constraintTop_toTopOf="@+id/imageViewProfilePic"
            app:layout_constraintVertical_bias="1.0"
            tools:srcCompat="@tools:sample/avatars[2]" />

        <Spinner
            android:id="@+id/spinnerState"
            android:layout_width="180dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputCity"
            app:layout_constraintEnd_toEndOf="@+id/textInputLastName"></Spinner>


        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textInputCity"
            app:layout_constraintTop_toBottomOf="@+id/textInputCity">
        </Spinner>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:text="Male"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="@id/seekBarSex"
            app:layout_constraintTop_toBottomOf="@+id/seekBarSex" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="Female"
            app:layout_constraintStart_toStartOf="@+id/seekBarSex"
            app:layout_constraintTop_toBottomOf="@+id/seekBarSex" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sex"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBarSex"
            app:layout_constraintStart_toStartOf="@id/textView5"
            app:layout_constraintTop_toTopOf="@+id/seekBarSex" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="Age"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/spinnerCountry"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCountry" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarSex"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/spinnerState"
            app:layout_constraintTop_toBottomOf="@+id/seekBarAge" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarAge"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:layout_marginTop="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/spinnerState"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSubmitNewUser"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="SUBMIT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarSex" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="376dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputFirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/textInputUsername"
            app:layout_constraintTop_toBottomOf="@+id/textInputUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="180dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/textInputFirstName"
            app:layout_constraintEnd_toEndOf="@+id/textInputUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:hint="@string/city"
            app:layout_constraintStart_toStartOf="@+id/textInputFirstName"
            app:layout_constraintTop_toBottomOf="@+id/textInputFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageViewProfilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/defaultuser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>