...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FitnessProfileFragment">


        <Spinner
            android:id="@+id/spinnerFeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/height_label"
            app:layout_constraintEnd_toStartOf="@+id/spinnerInches"
            app:layout_constraintStart_toEndOf="@+id/height_label"></Spinner>

        <Spinner
            android:id="@+id/spinnerInches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
